--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 10px;
+    padding: 50px 0px;
 
 }
 
@@ -22,13 +22,42 @@ body {
 
 .controls {
     margin-top: 50px;
-}
-
-.controls__colors{
     display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.controls__color {
+.controls__btns{
+    margin-bottom: 30px;
+}
+
+.controls__btns button {
+    all:unset;
+    cursor: pointer;
+    background-color: white;
+    padding: 5px 0px;
+    width: 80px;
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08 );
+    border: 2px solid rgba(0, 0, 0, 0.2 );
+    color: rgba(0, 0, 0, 0.8);
+    text-transform: uppercase;
+    font-weight: 800;
+    font-size: 12px;
+}
+
+.controls__btns button:active {
+    transform: scale(0.98);
+}
+
+.controls .controls__colors {
+    display: flex;
+    text-align: center;
+    font-size: 30px;
+}
+
+.controls__colors .controls__color {
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -36,4 +65,9 @@ body {
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08 );
     margin-left: 10px;
     margin-left: 10px;
+}
+
+.controls .controls__range {
+    margin-bottom: 30px;
+
 }
